增加id处理工具，新增接受好友请求
